objects/ortoo_qra__Object_Selection_Criteria__c.object
<CustomObject>
    <description>it has selection criteria information to select records from source queue.</description>
    <fields>
        <fullName>ortoo_qra__Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <referenceTo>ortoo_qra__Assignment_Group__c</referenceTo>
        <relationshipName>Object_Selection_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Field_Value__c</fullName>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right_Math_V1_to_V2__c</fullName>
        <label>Right Math V1 to V2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ortoo_qra__QA_Math_Operators</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__Right_Value2__c</fullName>
        <label>Right Value2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QA Object Selection Criteria</label>
    <nameField>
        <label>Object Selection Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Object Selection Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>